# MAxPy

./: .buildinfo  .gitignore  .gitmodules  README.md  api.html  basic_tutorial.html  case_study_fft.html  case_study_jpeg.html  case_study_sobel.html  contact.html  development.html  genindex.html  index.html  installation.html  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js  setup.cfg  usage.html
.github/workflows/: sphinx.yml
_sources/: basic_tutorial.rst.txt  case_study_fft.rst.txt  case_study_jpeg.rst.txt  case_study_sobel.rst.txt  development.rst.txt  index.rst.txt  installation.rst.txt  overview.rst.txt  usage.rst.txt
docs/: Makefile
docs/source/: api.rst  basic_tutorial.rst  case_study_sobel.rst  conf.py  contact.rst  index.rst  installation.rst  usage.rst
src/MAxPy/: check.py  compile.py  estimations.py  maxpy.py  pareto.py  probprun.py  resources.py  results.py  synth.py  utility.py  verilate.py  wrapper.py
src/MAxPy/tcl/Genus/: constraints.sdc  qor_saif.tcl  sdf_cmd_file.base  sta.tcl  synth.tcl
src/MAxPy/tcl/Incisive/: tcf_cmd.tcl
src/MAxPy/tcl/OpenSTA/: cmd_file.sta
src/MAxPy/tcl/Verilator/: verilator_config.vlt
src/MAxPy/tcl/Yosys/: synth.ys
src/MAxPy/templates/: cmake_pybind.txt  verilator_pybind_wrapper.cpp  verilator_pybind_wrapper.h
src/MAxPy/vlib/: AxLib.v
src/maxpy/: __init__.py  maxpy.py
src/maxpy/pdk/: NanGate15nm.v
src/maxpy/tcl/Genus/: qor_sta.tcl
src/maxpy/tcl/Verilator/: verilator_config.vlt
src/maxpy/templates/: instance_source.cpp  verilator_pybind_wrapper.cpp  verilator_pybind_wrapper.h
tests/: run.py  test.py  testbench.py
tests/rtl/: adder4.v
tests/rtl_param/: AxLib.v  adder4.v
