[metadata]
name = MAxPy
version = 0.0.1
author = Yuri Arbeletche <ysba000@gmail.com>, Guilherme Paim <gppaim@ieee.org>
description = MAxPy Multi-layer Approximate Computing Python Framework
long_description = file: README.md
long_description_content = text/markdown
url = https://github.com/MAxPy-Project/MAxPy
project_urls =
    Bug Tracker = https://github.com/MAxPy-Project/MAxPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.6

[options.packages.find]
where = src

include_package_data = True
[options.package_data]
MAxPy = templates/*, pdk/*, tcl/*/*, vlib/*/*
