[metadata]
name = MAxPy
version = 0.1.2
author = Yuri Arbeletche <ysba000@gmail.com>, Guilherme Paim <gppaim@ieee.org>
description = Multi-layer Approximate Computing Python Framework
long_description = file: README.md
long_description_content = text/markdown
long_description_content_type = text/markdown
url = https://maxpy-project.github.io/MAxPy/
project_urls =
    Bug Tracker = https://github.com/MAxPy-Project/MAxPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPL-3.0 license
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.9

install_requires =
    pandas
    matplotlib

[options.packages.find]
where = src

include_package_data = True
[options.package_data]
MAxPy =
    templates/*
    pdk/*
    tcl/**
    vlib/**

